# qconsf-2022-creating-kafka-streaming-data-pipeline

./: README.md  pyproject.toml
